# EuclideanMST

./: .gitignore  CMakeLists.txt  LICENSE  README.md  benchmark.h  dsu.h  emst.h  example.cpp  main.cpp  model.h  tree.h
benchmarks/: dim10.csv  dim2.csv  dim20.csv  dim3.csv  dim4.csv  dim5.csv
include/emst/: benchmark.hpp  dsu.hpp  emst.hpp  model.hpp  tree.hpp
src/: dsu.cpp
standalone_header/: emst.hpp
test_data/: dim10.txt  dim2.txt
